Criação dos controllers, models completos, login adm funcionando